trying to fix footer's white space issue

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,6 +1,11 @@
 body {
+    display: flex;
     flex-direction: column;
     justify-content: space-between;
+}
+
+main {
+    flex: 1;
 }
 
 .title {
